# ML-Dev-Kit

./: .gitignore  .project-root  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json  install_editor_extention.bat  install_editor_extention.sh  ubuntu_machine_setup.sh
configs/: __init__.py  eval.yaml  train.yaml
configs/callbacks/: default.yaml  early_stopping.yaml  model_checkpoint.yaml  model_summary.yaml
configs/data/: mnist.yaml
configs/debug/: default.yaml  fdr.yaml  limit.yaml  overfit.yaml  profiler.yaml
configs/experiment/: example.yaml
configs/extras/: default.yaml
configs/hparams_search/: mnist_optuna.yaml
configs/hydra/: default.yaml
configs/logger/: aim.yaml  comet.yaml  csv.yaml  many_loggers.yaml  mlflow.yaml  neptune.yaml  wandb.yaml
configs/model/: mnist.yaml
configs/paths/: default.yaml
configs/trainer/: ddp_sim.yaml  default.yaml
src/: eval.py  train.py
src/data/: mnist_datamodule.py
src/models/: mnist_module.py
src/models/components/: simple_dense_net.py
src/utils/: instantiators.py  logging_utils.py  pylogger.py  rich_utils.py  utils.py
tests/: check_cuda.py  conftest.py  test_configs.py  test_datamodules.py  test_eval.py  test_sweeps.py  test_train.py
tests/helpers/: package_available.py  run_if.py  run_sh_command.py
